; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msctf/extr_inputprocessor.c_test_Compartments.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msctf/extr_inputprocessor.c_test_Compartments.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_tm = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"GetGlobalCompartment failed\0A\00", align 1
@GUID_COMPARTMENT_SPEECH_OPENCLOSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"GetCompartment failed\0A\00", align 1
@IID_ITfCompartmentMgr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [47 x i8] c"ThreadMgr QI for IID_ITfCompartmentMgr failed\0A\00", align 1
@CLSID_FakeService = common dso_local global i32 0, align 4
@tid = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [49 x i8] c"DocumentMgr QI for IID_ITfCompartmentMgr failed\0A\00", align 1
@GUID_COMPARTMENT_PERSISTMENUENABLED = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [45 x i8] c"Context QI for IID_ITfCompartmentMgr failed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_Compartments to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_Compartments() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = load i32, i32* @g_tm, align 4
  %7 = call i32 @ITfThreadMgr_GetFocus(i32 %6, i32** %2)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @ITfDocumentMgr_GetTop(i32* %8, i32** %1)
  %10 = load i32, i32* @g_tm, align 4
  %11 = call i32 @ITfThreadMgr_GetGlobalCompartment(i32 %10, i32** %3)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @SUCCEEDED(i32 %12)
  %14 = call i32 @ok(i32 %13, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @ITfCompartmentMgr_GetCompartment(i32* %15, i32* @GUID_COMPARTMENT_SPEECH_OPENCLOSE, i32** %4)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @SUCCEEDED(i32 %17)
  %19 = call i32 @ok(i32 %18, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @ITfCompartment_Release(i32* %20)
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @enum_compartments(i32* %22, i32* @GUID_COMPARTMENT_SPEECH_OPENCLOSE, i32* null)
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @ITfCompartmentMgr_Release(i32* %24)
  %26 = load i32, i32* @g_tm, align 4
  %27 = bitcast i32** %3 to i32*
  %28 = call i32 @ITfThreadMgr_QueryInterface(i32 %26, i32* @IID_ITfCompartmentMgr, i32* %27)
  store i32 %28, i32* %5, align 4
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @SUCCEEDED(i32 %29)
  %31 = call i32 @ok(i32 %30, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.2, i64 0, i64 0))
  %32 = load i32*, i32** %3, align 8
  %33 = call i32 @ITfCompartmentMgr_GetCompartment(i32* %32, i32* @CLSID_FakeService, i32** %4)
  store i32 %33, i32* %5, align 4
  %34 = load i32, i32* %5, align 4
  %35 = call i32 @SUCCEEDED(i32 %34)
  %36 = call i32 @ok(i32 %35, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %37 = load i32*, i32** %3, align 8
  %38 = call i32 @enum_compartments(i32* %37, i32* @CLSID_FakeService, i32* @GUID_COMPARTMENT_SPEECH_OPENCLOSE)
  %39 = load i32*, i32** %3, align 8
  %40 = load i32, i32* @tid, align 4
  %41 = call i32 @ITfCompartmentMgr_ClearCompartment(i32* %39, i32 %40, i32* @CLSID_FakeService)
  %42 = load i32*, i32** %3, align 8
  %43 = call i32 @enum_compartments(i32* %42, i32* null, i32* @CLSID_FakeService)
  %44 = load i32*, i32** %3, align 8
  %45 = call i32 @ITfCompartmentMgr_Release(i32* %44)
  %46 = load i32*, i32** %4, align 8
  %47 = call i32 @ITfCompartment_Release(i32* %46)
  %48 = load i32*, i32** %2, align 8
  %49 = bitcast i32** %3 to i32*
  %50 = call i32 @ITfDocumentMgr_QueryInterface(i32* %48, i32* @IID_ITfCompartmentMgr, i32* %49)
  store i32 %50, i32* %5, align 4
  %51 = load i32, i32* %5, align 4
  %52 = call i32 @SUCCEEDED(i32 %51)
  %53 = call i32 @ok(i32 %52, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.3, i64 0, i64 0))
  %54 = load i32*, i32** %3, align 8
  %55 = call i32 @ITfCompartmentMgr_GetCompartment(i32* %54, i32* @GUID_COMPARTMENT_PERSISTMENUENABLED, i32** %4)
  store i32 %55, i32* %5, align 4
  %56 = load i32, i32* %5, align 4
  %57 = call i32 @SUCCEEDED(i32 %56)
  %58 = call i32 @ok(i32 %57, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %59 = load i32*, i32** %3, align 8
  %60 = call i32 @enum_compartments(i32* %59, i32* @GUID_COMPARTMENT_PERSISTMENUENABLED, i32* @GUID_COMPARTMENT_SPEECH_OPENCLOSE)
  %61 = load i32*, i32** %3, align 8
  %62 = call i32 @ITfCompartmentMgr_Release(i32* %61)
  %63 = load i32*, i32** %1, align 8
  %64 = bitcast i32** %3 to i32*
  %65 = call i32 @ITfContext_QueryInterface(i32* %63, i32* @IID_ITfCompartmentMgr, i32* %64)
  store i32 %65, i32* %5, align 4
  %66 = load i32, i32* %5, align 4
  %67 = call i32 @SUCCEEDED(i32 %66)
  %68 = call i32 @ok(i32 %67, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.4, i64 0, i64 0))
  %69 = load i32*, i32** %3, align 8
  %70 = call i32 @enum_compartments(i32* %69, i32* null, i32* @GUID_COMPARTMENT_PERSISTMENUENABLED)
  %71 = load i32*, i32** %3, align 8
  %72 = call i32 @ITfCompartmentMgr_Release(i32* %71)
  %73 = load i32*, i32** %1, align 8
  %74 = call i32 @ITfContext_Release(i32* %73)
  %75 = load i32*, i32** %2, align 8
  %76 = call i32 @ITfDocumentMgr_Release(i32* %75)
  ret void
}

declare dso_local i32 @ITfThreadMgr_GetFocus(i32, i32**) #1

declare dso_local i32 @ITfDocumentMgr_GetTop(i32*, i32**) #1

declare dso_local i32 @ITfThreadMgr_GetGlobalCompartment(i32, i32**) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @SUCCEEDED(i32) #1

declare dso_local i32 @ITfCompartmentMgr_GetCompartment(i32*, i32*, i32**) #1

declare dso_local i32 @ITfCompartment_Release(i32*) #1

declare dso_local i32 @enum_compartments(i32*, i32*, i32*) #1

declare dso_local i32 @ITfCompartmentMgr_Release(i32*) #1

declare dso_local i32 @ITfThreadMgr_QueryInterface(i32, i32*, i32*) #1

declare dso_local i32 @ITfCompartmentMgr_ClearCompartment(i32*, i32, i32*) #1

declare dso_local i32 @ITfDocumentMgr_QueryInterface(i32*, i32*, i32*) #1

declare dso_local i32 @ITfContext_QueryInterface(i32*, i32*, i32*) #1

declare dso_local i32 @ITfContext_Release(i32*) #1

declare dso_local i32 @ITfDocumentMgr_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
